[project]
name = "ComfyUI-TkNodes"
description = "Nodos personalizados para ComfyUI con escalado de imágenes, manipulación de latentes y soporte para Flux"
version = "nightly"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/TensorKaze/ComfyUI-TkNodes"

[tool.comfy]
PublisherId = "tensorkaze"
DisplayName = "ComfyUI-TkNodes"

[project.metadata]
nodes = [
    "FluxAdvancedSampler",
    "FluxLatentSampler",
    "LoadImageAndScaleToTotalPixels",
    "LoadModelAndUpscaleImage",
    "MultiLatentSelector",
    "MultiModelLoader",
    "RepeatLatentBatchOptional",
    "VAEEncodeOptional"
]