[project]
name = "ComfyUI-TkNodes"
description = "Custom nodes for ComfyUI with image scaling, latent manipulation, and Flux support"
version = "nightly"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/TensorKaze/ComfyUI-TkNodes"

[tool.comfy]
PublisherId = "tensorkaze"
DisplayName = "ComfyUI-TkNodes"

[project.metadata]
nodes = [
    "FluxAdvancedSampler",
    "FluxLatentSampler",
    "LoadImageAndScaleToTotalPixels",
    "LoadModelAndUpscaleImage",
    "MultiLatentSelector",
    "MultiModelLoader",
    "RepeatLatentBatchOptional",
    "VAEEncodeOptional"
]