[project]
name = "ComfyUI-TkNodes"
description = "Custom nodes for ComfyUI with image scaling, latent manipulation, and Flux support"
version = "nightly"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/TensorKaze/ComfyUI-TkNodes"

[tool.comfy]
PublisherId = "tensorkaze"
DisplayName = "ComfyUI-TkNodes"

[project.metadata]
nodes = [
    "Flux Advanced Sampler",
    "Flux Latent Sampler",
    "Load Image & Scale to Total Pixels",
    "Load Model & Upscale Image",
    "Multi-Latent Selector",
    "Multi-Model Loader",
    "Repeat Latent Batch (Optional)",
    "VAE Encode (Optional)"
]